--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     },
     "repository": "github:tsjensen/civbuddy",
     "scripts": {
+        "postinstall": "patch-package",
         "clean": "rimraf build",
         "reset-version-json": "git checkout src/ts/framework/version.json",
         "prebuild": "npm run clean",
         "build": "npm-run-all --parallel --silent reset-version-json fix-l20n process-html sass tslint",
-        "prefix-l20n": "rimraf build/l20n && copyfiles -f node_modules/l20n/dist/web/l20n.js build/l20n",
-        "fix-l20n": "apply-patch l20n-mojibake-fix.patch",
-        "postfix-l20n": "uglifyjs build/l20n/l20n.js -m -c -o build/l20n/l20n.min.js",
+        "fix-l20n": "mkdirp build/l20n && uglifyjs node_modules/l20n/dist/web/l20n.js -m -c -o build/l20n/l20n.min.js",
         "process-html": "node node_modules/html-includes/bin/run.js --src resources --dest build/dist",
         "sass": "node-sass --source-map=true src/sass -o build/dist/css/",
         "tslint": "tslint --project tsconfig.json --format verbose src/ts/**/*.ts",
@@ -58,7 +57,6 @@
         "@types/sprintf-js": "1.1.2",
         "@types/uuid": "3.4.4",
         "@types/webpack": "4.4.27",
-        "apply-patch": "0.1.2",
         "chai": "4.2.0",
         "copy-webpack-plugin": "5.0.2",
         "copyfiles": "2.1.0",
@@ -69,9 +67,11 @@
         "html-includes": "4.1.1",
         "jsdom": "14.0.0",
         "jsdom-global": "3.0.2",
+        "mkdirp": "0.5.1",
         "mocha": "6.1.0",
         "node-sass": "4.11.0",
         "npm-run-all": "4.1.5",
+        "patch-package": "6.1.2",
         "rimraf": "2.6.3",
         "ssri": "6.0.1",
         "ts-loader": "5.3.3",
