--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "patch-package": "6.1.2",
         "rimraf": "2.6.3",
         "ssri": "6.0.1",
+        "svgo": "^1.3.0",
         "ts-loader": "5.3.3",
         "ts-node": "8.0.3",
         "tsconfig-paths": "3.8.0",
