Switch from Google Analytics to plausible.io
- privacy-friendly, no personal information is collected
- no cookies, so no cookie consent required
- faster loading, smaller script

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ baseurl: ''
 github: 'tsjensen/civbuddy'
 
 # Set this to your UA-# value, or '' to disable the block completely
-gaaccount: 'UA-119469398-1'
+gaaccount: ''
 
 
 permalink: /:year/:month/:title
